force-app/main/default/objects/ContractGroupPlanGroupClass/fields/ZRH_CondicionesEspeciales__c.field-meta.xml
<CustomField>
    <fullName>ZRH_CondicionesEspeciales__c</fullName>
    <label>Condiciones Especiales</label>
    <length>255</length>
    <type>Text</type>
</CustomField>