force-app/main/default/objects/ContractGroupPlanGroupClass/fields/ZRH_Contratante__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Contratante__c</fullName>
    <formula>CASESAFEID(ContractGroupPlan.Contract.AccountId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contratante</label>
    <type>Text</type>
</CustomField>