force-app/main/default/objects/ContractGroupPlanGroupClass/fields/ZRH_Holding__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Holding__c</fullName>
    <formula>CASESAFEID(ContractGroupPlan.Contract.Account.ParentId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Holding</label>
    <type>Text</type>
</CustomField>