force-app/main/default/objects/ContractGroupPlanGroupClass/fields/ZRH_IDPackPoliza__c.field-meta.xml
<CustomField>
    <fullName>ZRH_IDPackPoliza__c</fullName>
    <label>ID Pack de Poliza</label>
    <length>255</length>
    <type>Text</type>
</CustomField>