force-app/main/default/objects/ContractGroupPlanGroupClass/fields/ZRH_Obligatoriedad__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Obligatoriedad__c</fullName>
    <label>Obligatoriedad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>